# ROS2_Learning

./: .gitmodules  About-Different-ROS2-middleware-vendor.md  Domain_ID.md  README.md  turtlesim.yaml
How-to-Guides/: ament_cmake user documentation.md
Linear_Algebra/: Numpy_learn.ipynb  test.py  使用numpy进行坐标转换.ipynb
Linear_Algebra/.ipynb_checkpoints/: Numpy_learn-checkpoint.ipynb  使用numpy进行坐标转换-checkpoint.ipynb
ROS2_Concepts/: Composition.md
Tutorials/: Composing multiple nodes in a single process.md
Tutorials/install/: local_setup.sh  setup.sh
Tutorials/install/my_composition/share/ament_index/resource_index/package_run_dependencies/: my_composition
Tutorials/install/my_composition/share/ament_index/resource_index/rclcpp_components/: my_composition
Tutorials/install/my_composition/share/my_composition/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Tutorials/install/my_composition/share/my_composition/cmake/: my_compositionConfig.cmake
Tutorials/log/: latest_build
Tutorials/src/my_composition/: CMakeLists.txt  Composing multiple nodes in a single process.md
Tutorials/src/my_composition/include/my_composition/: my_client_component.hpp  my_listener_component.hpp  my_node_like_listener_component.hpp  my_server_component.hpp  my_talker_component.hpp  visibility_control.h
Tutorials/src/my_composition/launch/: my_composition_demo.launch.py
Tutorials/src/my_composition/src/: my_client_component.cpp  my_listener_component.cpp  my_node_like_listener_component.cpp  my_server_comoponent.cpp  my_server_component.cpp  my_talker_component.cpp  note.md
ros2_yolo/src/raw_image_pub/: CMakeLists.txt  ImagePub.drawio  README.md  package.xml
ros2_yolo/src/raw_image_pub/include/raw_image_pub/: imagepub.hpp
ros2_yolo/src/raw_image_pub/launch/: raw_image_pub.launch.py
ros2_yolo/src/raw_image_pub/src/: imagepub.cpp
ros2_yolo/src/tensorrt_yolov5/: .$yolo_component.drawio.bkp  .$yolo_component.drawio.dtmp  CMakeLists.txt  README.md  package.xml  yolo_component.drawio
ros2_yolo/src/tensorrt_yolov5/config/: coco_colormap.txt
ros2_yolo/src/tensorrt_yolov5/include/tensorrt_yolov5/: yolov5.hpp  yolov5_component.hpp
ros2_yolo/src/tensorrt_yolov5/launch/: tensort_yolov5.launch.py
ros2_yolo/src/tensorrt_yolov5/lib/src/: trt_yolo.cpp
ros2_yolo/src/tensorrt_yolov5/src/: yolov5_component.cpp
town_ws/: README.md
town_ws/install/: local_setup.sh  setup.sh
town_ws/install/village_interface/include/village_interface/village_interface/msg/: novel.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
town_ws/install/village_interface/include/village_interface/village_interface/msg/detail/: novel__builder.hpp  novel__rosidl_typesupport_fastrtps_cpp.hpp  novel__struct.hpp  novel__traits.hpp  novel__type_support.c  novel__type_support.cpp  novel__type_support.h
town_ws/install/village_interface/include/village_interface/village_interface/srv/: sell_novel.h  sell_novel.hpp
town_ws/install/village_interface/include/village_interface/village_interface/srv/detail/: borrow_money__builder.hpp  borrow_money__functions.h  borrow_money__rosidl_typesupport_fastrtps_cpp.hpp  borrow_money__rosidl_typesupport_introspection_c.h  borrow_money__rosidl_typesupport_introspection_cpp.hpp  borrow_money__struct.h  borrow_money__type_support.cpp  borrow_money__type_support.h  sell_novel__builder.hpp  sell_novel__functions.h  sell_novel__rosidl_typesupport_introspection_c.h  sell_novel__rosidl_typesupport_introspection_cpp.hpp  sell_novel__struct.hpp  sell_novel__traits.hpp  sell_novel__type_support.cpp
town_ws/install/village_interface/local/lib/python3.10/dist-packages/village_interface-0.0.0-py3.10.egg-info/: SOURCES.txt
town_ws/install/village_interface/share/village_interface/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
town_ws/install/village_interface/share/village_interface/cmake/: ament_cmake_export_targets-extras.cmake  export_village_interface__rosidl_generator_cExport-noconfig.cmake  export_village_interface__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_village_interface__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  village_interfaceConfig.cmake  village_interface__rosidl_typesupport_cExport-noconfig.cmake  village_interface__rosidl_typesupport_cExport.cmake  village_interface__rosidl_typesupport_cppExport-noconfig.cmake  village_interface__rosidl_typesupport_introspection_cExport.cmake
town_ws/install/village_interface/share/village_interface/msg/: Novel.idl
town_ws/install/village_interface/share/village_interface/srv/: BorrowMoney_Response.msg  SellNovel.srv
town_ws/install/village_li/lib/village_li/: baipiaoguai_node
town_ws/install/village_li/share/village_li/: package.ps1  package.sh
town_ws/install/village_li/share/village_li/launch/: villiage.launch.py
town_ws/install/village_wang/lib/village_wang/: wang2_node
town_ws/install/village_wang/share/ament_index/resource_index/parent_prefix_path/: village_wang
town_ws/install/village_wang/share/village_wang/: package.ps1  package.sh
town_ws/install/village_zhang/lib/village_zhang/: zhang3_node
town_ws/install/village_zhang/share/village_zhang/: package.ps1  package.sh  package.xml
town_ws/log/: latest_build
town_ws/rosbag2_2023_10_08-10_12_56/: metadata.yaml  rosbag2_2023_10_08-10_12_56_0.db3
town_ws/src/village_interface/: CMakeLists.txt
town_ws/src/village_interface/msg/: Novel.msg
town_ws/src/village_li/: package.xml  setup.cfg  setup.py
town_ws/src/village_li/village_li/: li3.py  li4.py  li4_pop.py
town_ws/src/village_wang/: CMakeLists.txt  package.xml
town_ws/src/village_wang/launch/: villiage.launch.py
town_ws/src/village_wang/src/: wang2.cpp  wang2_pop.cpp
town_ws/src/village_zhang/: CMakeLists.txt
town_ws/src/village_zhang/src/: zhang3.cpp
(+8 files in other folders)
